<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/loginActivity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context="zxc.studio.vpt.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/loginActivity_image_SubtractTop"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="9dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:rotation="180"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/loginActivity_image_SubtractBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backgroundsubtract" />

    <ImageView
        android:id="@+id/loginActivity_image_SubtractBottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/subtractshape" />

    <LinearLayout
        android:id="@+id/loginActivity_linearLayout_VPTSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00">

        <TextView
            android:id="@+id/loginActivity_textView_VPTSignV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/vptSign_v"
            android:textColor="@color/baby_blue"
            android:textSize="85dp" />

        <TextView
            android:id="@+id/loginActivity_textView_VPTSignP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-15dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/vptSign_P"
            android:textColor="@color/baby_blue"
            android:textSize="85dp" />

        <TextView
            android:id="@+id/loginActivity_textView_VPTSignT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-32dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/vptSign_T"
            android:textColor="@color/baby_blue"
            android:textSize="85dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/loginActivity_textView_loginOrSignUp"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:fontFamily="@font/roboto"
        android:text="@string/loginActivity_loginOrSignUp_LABEL"
        android:textColor="@color/Rich_Black_FOGRA_39"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginActivity_linearLayout_loginDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".95" />

    <LinearLayout
        android:id="@+id/loginActivity_linearLayout_loginDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="220dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/loginActivity_editText_emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:alpha=".7"
            android:fontFamily="@font/roboto"
            android:hint="@string/loginActivity_emailHint_LABEL"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406" />

        <EditText
            android:id="@+id/loginActivity_editText_passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:alpha=".7"
            android:fontFamily="@font/roboto"
            android:hint="@string/loginActivity_passwordHint_LABEL"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.467" />

        <Button
            android:id="@+id/loginActivity_button_emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="108dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="108dp"
            android:background="@drawable/button"
            android:enabled="true"
            android:fontFamily="@font/roboto"
            android:text="@string/loginActivity_signIn_BUTTONLABEL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.613" />

        <Button
            android:id="@+id/loginActivity_button_emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/roboto"
            android:text="@string/loginActivity_signUp_BUTTONLABEL" />

        <TextView
            android:id="@+id/loginActivity_button_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/loginActivity_forgotPassword_BUTTONLABEL"
            android:textColor="@color/Rich_Black_FOGRA_39"
            android:textSize="16dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginActivity_progressBar_loginProcessing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />


</androidx.constraintlayout.widget.ConstraintLayout>