...
    <string name="userDetailsFragment_emailTitle_LABEL">Email:</string>
    <string name="userDetailsFragment_PLACEHOLDER">Name</string>
    <string name="userDetailsFragment_changeEmailButton_LABEL">Change</string>
    <string name="userDetailsFragment_coachTitle_LABEL">Coach:</string>
    <string name="userDetailsFragment_removeButton_LABEL">Remove</string>

    <string name="LoginActivity_TOAST_invalidEmail">Invalid email</string>


</resources>

