...
            android:textColor="@color/baby_blue"
            android:textSize="85dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpActivity_linearLayout_signUpDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="158dp"
...
